# projetustgov

./: .env.example  .gitignore  ARCHITECTURE.md.docx  Dockerfile  Dockerfile.railway  RAILWAY_DEPLOY.md  README.md.docx  config.yaml  deploy-railway.sh  docker-compose.yml  docs - data-model.md.docx  docs - deployment.md.docx  main.py  pyproject.toml  railway.dashboard.json  railway.json  railway.production.json  requirements.txt
.devcontainer/: devcontainer.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/debug/resolved/: appconfig-database-url-error.md  relationship-extraction-fix.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.streamlit/: config.toml
src/: cli.py  config.py
src/api/: main.py  minimal.py  simple_main.py
src/config/: __init__.py  loader.py
src/crawler/: browser.py  downloader.py  navigator.py  repository_downloader.py
src/dashboard/: __init__.py  config.py  streamlit_app.py
src/dashboard/components/: __init__.py  (+3 more)
src/loader/: database.py  db_models.py  extraction_log.py  upsert.py
src/monitor/: alerting.py  lineage.py  logger.py  reconciliation.py  scheduler_health.py  volume_alerts.py
src/orchestrator/: __init__.py  dry_run.py  pipeline.py
src/parser/: encoding.py  file_parser.py  schemas.py
src/transformer/: models.py  validator.py
tests/: test_loader.py  test_parser.py  test_validator.py
tests/fixtures/: encoding_latin1_test.csv  sample_apoiadores.xlsx  sample_emendas.xlsx  sample_programas.xlsx  sample_propostas.xlsx  sample_propostas_latin1.csv
(+50 files in other folders)
